--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@cks-systems/backpack-client",
-  "version": "3.0.4",
-  "description": "Backpack exchange typescript client",
-  "main": "lib/backpack_client.js",
+  "name": "@carloscao0928/bp_exchange",
+  "version": "0.0.1",
+  "description": "Backpack exchange",
+  "main": "backpack_client.js",
   "license": "MIT",
-  "types": "lib/backpack_client.d.ts",
-  "homepage": "https://github.com/CKS-Systems/backpack-client",
+  "types": "backpack_client.d.ts",
+  "homepage": "https://github.com/carloscao0928/bp_exchange",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CKS-Systems/backpack-client"
+    "url": "https://github.com/carloscao0928/bp_exchange"
   },
   "scripts": {
     "build": "tsc",
